--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "paths": { "*": ["customTypings/*"] },
         "outDir": "../dist/rpa-pui-manager/api",
+        "module": "commonjs",
         "target": "es5",
         "types": [
             "node",
