--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@hmcts/ccpay-web-component": "5.0.4",
     "@hmcts/ccd-case-ui-toolkit": "4.10.0-rc.6",
     "@hmcts/frontend": "0.0.39-alpha",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
+    "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
     "@hmcts/rpx-xui-node-lib": "2.25.12",
@@ -77,35 +77,35 @@
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
-    "applicationinsights": "2.3.3",
-    "applicationinsights-js": "^1.0.21",
+    "applicationinsights": "1.7.2",
+    "applicationinsights-js": "^1.0.20",
     "axios": ">=0.21.1",
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.2",
-    "config": "^3.3.7",
+    "config": "^3.2.5",
     "connect-redis": "^2.5.1",
     "cookie-parser": "^1.4.4",
-    "core-js": "^2.6.12",
+    "core-js": "2.6.12",
     "crypto-js": "^3.1.43",
     "dotenv-extended": "^2.7.1",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
-    "express": "^4.17.12",
-    "express-session": "^1.17.3",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "faker": "^5.5.3",
     "file-saver": "^2.0.2",
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.0",
-    "govuk-frontend": "^3.1.0",
-    "govuk_frontend_toolkit": "^8.2.0",
+    "govuk-frontend": "^3.12.0",
+    "govuk_frontend_toolkit": "^9.0.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "launchdarkly-js-client-sdk": "^2.15.2",
+    "launchdarkly-js-client-sdk": "^2.16.3",
     "log4js": "^3.0.6",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
@@ -113,7 +113,6 @@
     "ngx-md": "^7.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
-    "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^2.4.2",
@@ -121,9 +120,8 @@
     "rxjs-compat": "^6.6.7",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
-    "terser-webpack-plugin": "^2.3.5",
     "xlsx": "^0.15.4",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.29",
@@ -137,35 +135,37 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "@types/applicationinsights-js": "^1.0.9",
-    "@types/chai": "^4.2.18",
+    "@types/chai": "^4.3.1",
+    "@types/config": "^0.0.36",
     "@types/chai-as-promised": "^7.1.1",
     "@types/crypto-js": "^3.1.9-1",
+    "@types/ejs": "^2.6.3",
     "@types/faker": "^5.5.3",
     "@types/global-agent": "^2.1.0",
-    "@types/express": "^4.17.12",
-    "@types/express-session": "^1.17.3",
-    "@types/jasmine": "~3.7.6",
-    "@types/jasminewd2": "~2.0.9",
-    "@types/mocha": "^8.2.2",
+    "@types/express": "^4.16.1",
+    "@types/express-session": "^1.17.0",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/mocha": "^8.0.3",
     "@types/redis": "^2.4.2",
     "@types/session-file-store": "^1.2.1",
+    "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.5",
-    "@types/node": "^15.6.1",
+    "@types/node": "14.14.45",
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.18",
     "chai-as-promised": "7.1.1",
-    "codelyzer": "5.2.0",
+    "codelyzer": "^5.0.1",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
-    "jasmine": "^3.7.6",
-    "jasmine-marbles": "^0.6.0",
-    "jasmine-core": "~3.5.0",
+    "jasmine-marbles": "^0.4.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
-    "karma": "~6.0.0",
+    "karma": "3.1.4",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "5.0.1",
@@ -176,7 +176,8 @@
     "ng-packagr": "^5.1.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^2.0.2",
-    "@pact-foundation/pact": "^9.2.0",
+    "node-sass": "4.13.1",
+    "@pact-foundation/pact": "^9.11.1",
     "@pact-foundation/pact-node": "^10.9.7",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
@@ -188,8 +189,10 @@
     "should": "13.2.3",
     "sinon": "^7.2.3",
     "sinon-chai": "^3.3.0",
-    "sinon-express-mock": "^2.1.0",
+    "sinon-express-mock": "^2.2.0",
     "sonar-scanner": "^3.1.0",
+    "terser-webpack-plugin": "^5.3.3",
+    "source-map-support": "^0.5.19",
     "ts-node": "~10.8.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
@@ -199,8 +202,7 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^4.9.2",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-source-map-support": "^2.0.1"
+    "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
