--- a/package.json
+++ b/package.json
@@ -176,7 +176,7 @@
     "ng-packagr": "^5.1.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.13.1",
     "@pact-foundation/pact": "^9.11.1",
     "@pact-foundation/pact-node": "^10.9.7",
     "pa11y": "^5.3.0",
