--- a/package.json
+++ b/package.json
@@ -165,11 +165,13 @@
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
-    "karma": "3.1.4",
+    "karma": "~6.0.0",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "5.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-parallel": "^0.3.1",
+    "karma-sonarqube-unit-reporter": "^0.0.23",
     "karma-spec-reporter": "0.0.34",
     "mocha": "^8.1.1",
     "mochawesome": "^6.2.1",
