--- a/package.json
+++ b/package.json
@@ -56,19 +56,18 @@
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@edium/fsm": "^2.1.2",
+    "@hmcts/ccd-case-ui-toolkit": "4.18.4",
     "@hmcts/ccpay-web-component": "5.0.4",
-    "@hmcts/ccd-case-ui-toolkit": "4.10.0-rc.6",
     "@hmcts/frontend": "0.0.39-alpha",
     "@hmcts/nodejs-healthcheck": "1.7.0",
-    "@hmcts/properties-volume": "0.0.13",
+    "@hmcts/properties-volume": "^0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
-    "@hmcts/rpx-xui-node-lib": "^2.25.12",
+    "@hmcts/rpx-xui-node-lib": "2.25.12",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
@@ -77,18 +76,17 @@
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.1",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
-    "applicationinsights": "1.5.0",
+    "applicationinsights": "1.7.2",
     "applicationinsights-js": "^1.0.20",
-    "axios": ">=0.21.1",
-    "base-64": "^0.1.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.2",
     "config": "^3.2.5",
     "connect-redis": "^2.5.1",
     "cookie-parser": "^1.4.4",
     "core-js": "2.6.12",
-    "crypto-js": "^3.1.43",
-    "dotenv-extended": "^2.7.0",
+    "crypto-js": "^3.1.9-1",
+    "dotenv-extended": "^2.7.1",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
     "express": "^4.16.4",
@@ -147,12 +145,12 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^8.0.3",
-    "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon": "^7.0.13",
     "@types/sinon-chai": "^3.2.5",
     "@types/node": "12.12.70",
     "allure-js-commons": "^1.3.2",
+    "base-64": "^0.1.0",
     "chai": "^4.2.18",
     "chai-as-promised": "7.1.1",
     "codelyzer": "^5.0.1",
@@ -193,17 +191,17 @@
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.2.0",
     "sonar-scanner": "^3.1.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "source-map-support": "^0.5.19",
+    "terser-webpack-plugin": "^5.3.3",
     "ts-node": "~10.8.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
     "tslint": "~5.11.0",
     "typescript": "~3.5.0",
     "ts-loader": "~6.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-source-map-support": "^2.0.1"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
