--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
-        "paths": { "*": ["customTypings/*"] },
         "outDir": "../dist/rpa-pui-manager/api",
+        "module": "commonjs",
         "target": "es5",
         "types": [
             "node",
@@ -21,8 +21,5 @@
     ],
     "exclude": [
         "**/*.spec.ts"
-    ],
-    "files": [
-        "./customTypings/customExpress/index.d.ts"
     ]
 }
