--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,13 +1,17 @@
 {
     "compileOnSave": false,
     "compilerOptions": {
+        "paths": { "*": ["customTypings/*"] },
         "outDir": "../dist/rpa-pui-manager/api",
-        "module": "commonjs",
         "target": "es5",
         "types": [
             "node",
             "mocha",
             "rxjs"
+        ],
+        "typeRoots": [
+          "./customTypings",
+          "node_modules/@types"
         ],
         "baseUrl": ".",
         "lib": [
@@ -21,5 +25,8 @@
     ],
     "exclude": [
         "**/*.spec.ts"
+    ],
+    "files": [
+        "./customTypings/customExpress/index.d.ts"
     ]
 }
