--- a/package.json
+++ b/package.json
@@ -67,26 +67,32 @@
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "^0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
-    "@hmcts/rpx-xui-node-lib": "2.25.12",
+    "@hmcts/rpx-xui-node-lib": "^2.24.3",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/router-store": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
-    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/express-engine": "^7.1.0",
     "@nicky-lenaers/ngx-scroll-to": "^1.1.1",
-    "applicationinsights": "1.7.2",
+    "@pact-foundation/pact": "^9.2.0",
+    "@pact-foundation/pact-node": "^10.9.7",
+    "@types/crypto-js": "^3.1.43",
+    "@types/faker": "^4.1.12",
+    "@types/global-agent": "^2.1.0",
+    "applicationinsights": "^1.5.0",
     "applicationinsights-js": "^1.0.20",
-    "axios": "^0.21.1",
+    "axios": ">=0.21.1",
+    "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
-    "class-transformer": "^0.3.2",
-    "config": "^3.2.5",
-    "connect-redis": "^2.5.1",
+    "class-transformer": "^0.2.3",
+    "config": "^3.2.4",
+    "connect-redis": "4.0.4",
     "cookie-parser": "^1.4.4",
-    "core-js": "2.6.12",
+    "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
-    "dotenv-extended": "^2.7.1",
+    "dotenv-extended": "^2.7.0",
     "ejs": "^2.6.1",
     "exception-formatter": "^1.0.7",
     "express": "^4.16.4",
@@ -96,28 +102,34 @@
     "form-data": "^2.5.1",
     "git-rev-sync": "^2.0.0",
     "global-agent": "^2.1.8",
-    "govuk-frontend": "^3.12.0",
-    "govuk_frontend_toolkit": "^9.0.0",
+    "govuk-frontend": "^3.1.0",
+    "govuk_frontend_toolkit": "^8.2.0",
     "helmet": "^3.21.3",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "launchdarkly-js-client-sdk": "^2.16.3",
+    "launchdarkly-js-client-sdk": "^2.15.2",
     "log4js": "^3.0.6",
     "ngx-cookie": "4.0.2",
     "ngx-cookie-service": "^2.1.0",
-    "ngx-logger": "^4.3.3",
+    "ngx-logger": "^4.0.3",
     "ngx-md": "^7.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
+    "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
-    "redis": "^3.0.2",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.6.7",
+    "redis": "3.0.2",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
+    "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "~6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
@@ -133,52 +145,41 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^3.0.1",
     "@types/applicationinsights-js": "^1.0.9",
-    "@types/chai": "^4.3.1",
-    "@types/config": "^0.0.36",
-    "@types/chai-as-promised": "^7.1.1",
-    "@types/crypto-js": "^3.1.9-1",
-    "@types/ejs": "^2.6.3",
-    "@types/faker": "^5.5.3",
-    "@types/global-agent": "^2.1.0",
-    "@types/express": "^4.16.1",
+    "@types/chai": "^4.1.7",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/connect-redis": "0.0.13",
+    "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/mocha": "^8.0.3",
+    "@types/mocha": "^5.2.5",
+    "@types/redis": "2.8.16",
     "@types/session-file-store": "^1.2.1",
-    "@types/sinon": "^7.0.13",
-    "@types/sinon-chai": "^3.2.5",
-    "@types/node": "12.12.70",
+    "@types/sinon-chai": "^3.2.4",
     "allure-js-commons": "^1.3.2",
-    "base-64": "^0.1.0",
-    "chai": "^4.2.18",
+    "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "5.2.0",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
     "cucumber-html-report": "0.6.5",
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
+    "jasmine-core": "^2.99.1",
     "jasmine-marbles": "^0.4.1",
-    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jsonwebtoken": "^8.5.1",
-    "karma": "~6.0.0",
-    "karma-chrome-launcher": "3.1.1",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "5.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "karma-parallel": "^0.3.1",
-    "karma-sonarqube-unit-reporter": "^0.0.23",
-    "karma-spec-reporter": "0.0.34",
-    "mocha": "^8.1.1",
-    "mochawesome": "^6.2.1",
-    "ng-packagr": "^5.1.0",
+    "karma": "3.1.4",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "mocha": "^5.2.0",
+    "mochawesome": "3.1.1",
+    "ng-packagr": "^3.0.0-rc.2",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
-    "node-sass": "^4.13.1",
-    "@pact-foundation/pact": "^9.11.1",
-    "@pact-foundation/pact-node": "^10.9.7",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
     "protractor": "~5.4.0",
@@ -189,19 +190,13 @@
     "should": "13.2.3",
     "sinon": "^7.2.3",
     "sinon-chai": "^3.3.0",
-    "sinon-express-mock": "^2.2.0",
+    "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "ts-node": "~10.8.1",
+    "ts-node": "~7.0.0",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.0",
-    "ts-loader": "~6.2.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-source-map-support": "^2.0.1"
+    "typescript": "~3.5.0"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
@@ -221,6 +216,7 @@
     "**/**/prismjs": "^1.23.0",
     "**/**/serialize-javascript": "^3.1.0",
     "**/**/elliptic": "^6.5.4",
+    "**/**/socket.io": "^2.4.0",
     "**/**/y18n": "^3.2.2",
     "**/**/ssri": "8.0.1",
     "**/**/jose": "1.28.1",
