--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@hmcts/ccd-case-ui-toolkit": "4.18.4",
     "@hmcts/ccpay-web-component": "5.0.4",
     "@hmcts/frontend": "0.0.39-alpha",
-    "@hmcts/nodejs-healthcheck": "1.7.0",
+    "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "^0.0.13",
     "@hmcts/rpx-xui-common-lib": "1.7.6",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
@@ -88,7 +88,7 @@
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "config": "^3.2.4",
-    "connect-redis": "4.0.4",
+    "connect-redis": "^4.0.4",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
@@ -120,7 +120,7 @@
     "node-sass": "4.13.1",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
-    "redis": "3.0.2",
+    "redis": "^3.0.2",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
@@ -147,13 +147,13 @@
     "@types/applicationinsights-js": "^1.0.9",
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.2",
-    "@types/connect-redis": "0.0.13",
+    "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^5.2.5",
-    "@types/redis": "2.8.16",
+    "@types/redis": "^2.8.16",
     "@types/session-file-store": "^1.2.1",
     "@types/sinon-chai": "^3.2.4",
     "allure-js-commons": "^1.3.2",
