--- a/charts/xui-mo-webapp/Chart.yaml
+++ b/charts/xui-mo-webapp/Chart.yaml
@@ -1,20 +1,20 @@
 apiVersion: v2
 name: xui-mo-webapp
 home: https://github.com/hmcts/rpx-xui-manage-organisations
-version: 1.1.5
+version: 1.1.4
 description: Expert UI
 maintainers:
   - name: HMCTS RPX XUI
 dependencies:
   - name: nodejs
     version: 2.4.1
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    repository: '@hmctspublic'
   - name: redis
     version: 16.11.3
     repository: "https://charts.bitnami.com/bitnami"
     condition: redis.enabled
   - name: idam-pr
     version: ~2.2.6
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    repository: '@hmctspublic'
     condition: idam-pr.enabled
 
