--- a/package.json
+++ b/package.json
@@ -121,11 +121,15 @@
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.6.7",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "~6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
@@ -188,17 +192,11 @@
     "sinon-chai": "^3.3.0",
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
-    "ts-loader": "~6.2.1",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^4.9.2",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-source-map-support": "^2.0.1"
+    "typescript": "~3.5.0"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
