--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^14.0.3",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
