--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@hmcts/frontend": "0.0.39-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
     "@hmcts/properties-volume": "^0.0.13",
-    "@hmcts/rpx-xui-common-lib": "1.7.6",
+    "@hmcts/rpx-xui-common-lib": "2.1.0-angular-upgrade-11",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
