--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.0",
+    "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
     "@types/crypto-js": "^3.1.43",
