--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "@edium/fsm": "^2.1.2",
-    "@hmcts/ccd-case-ui-toolkit": "4.18.4",
+    "@hmcts/ccd-case-ui-toolkit": "5.0.1-angular11-upgrade",
     "@hmcts/ccpay-web-component": "5.0.4",
     "@hmcts/frontend": "0.0.39-alpha",
     "@hmcts/nodejs-healthcheck": "^1.7.0",
