--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
+    "@angular/animations": "9.1.13",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccd-case-ui-toolkit": "5.0.1-angular11-upgrade",
     "@hmcts/frontend": "0.0.39-alpha",
@@ -125,17 +125,18 @@
     "smoothscroll-polyfill": "^0.4.3",
     "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "~6.2.1",
+    "tslib": "^1.10.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
     "xlsx": "^0.15.4",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
     "@stryker-mutator/html-reporter": "^3.0.1",
@@ -157,7 +158,7 @@
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
-    "codelyzer": "5.2.0",
+    "codelyzer": "^5.1.2",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
     "cucumber-html-report": "0.6.5",
@@ -175,7 +176,7 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "mocha": "^5.2.0",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^9.1.5",
+    "ng-packagr": "^9.0.0",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
@@ -191,9 +192,8 @@
     "sinon-express-mock": "^2.1.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~7.0.0",
-    "tslib": "^1.7.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.0"
+    "typescript": "~3.8.3"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
