--- a/angular.json
+++ b/angular.json
@@ -153,9 +153,9 @@
           },
           "configurations": {
             "production": {
-              "project": "projects/gov-ui/ng-package.prod.json"
-            ,              "tsConfig": "projects/gov-ui/tsconfig.lib.prod.json"
-}
+              "project": "projects/gov-ui/ng-package.prod.json",
+              "tsConfig": "projects/gov-ui/tsconfig.lib.prod.json"
+            }
           }
         },
         "testx": {
@@ -186,5 +186,8 @@
     "@schematics/angular:component": {
       "style": "scss"
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
