--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "2.1.0-angular-upgrade-11",
     "@hmcts/rpx-xui-node-lib": "^2.24.3",
-    "@ng-idle/core": "^8.0.0-beta.4",
-    "@ng-idle/keepalive": "^8.0.0-beta.4",
+    "@ng-idle/core": "^10.0.0",
+    "@ng-idle/keepalive": "^10.0.0",
     "@ngrx/effects": "^9.1.13",
     "@ngrx/router-store": "^9.1.13",
     "@ngrx/store": "^9.1.13",
