--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.2.5",
-    "@angular/cdk": "^10.2.5",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
-    "@angular/forms": "^10.2.5",
-    "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/material": "11.2.13",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccd-case-ui-toolkit": "5.0.3-angular11-upgrade",
     "@hmcts/frontend": "0.0.39-alpha",
@@ -133,9 +133,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.4",
-    "@angular/cli": "~10.2.4",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "~10.2.5",
+    "@angular/cli": "~11.2.4",
+    "@angular/compiler-cli": "^11.2.5",
+    "@angular/language-service": "~11.2.5",
     "@stryker-mutator/api": "^3.0.1",
     "@stryker-mutator/core": "^3.0.1",
     "@stryker-mutator/html-reporter": "^3.0.1",
