--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@hmcts/ccd-case-ui-toolkit": "5.0.14-angular11-upgrade",
     "@hmcts/ccpay-web-component": "5.0.4",
     "@hmcts/frontend": "0.0.50-alpha",
-    "@hmcts/nodejs-healthcheck": "^1.7.0",
+    "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
     "@hmcts/rpx-xui-common-lib": "2.1.0-angular-upgrade-11",
     "@hmcts/rpx-xui-node-lib": "2.25.12",
@@ -200,7 +200,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^4.9.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-source-map-support": "^2.0.1"
   },
   "resolutions": {
     "**/**/dot-prop": "^5.1.1",
