--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack-node.config.js",
-    "coverage": "cross-env TS_NODE_FILES=true npx nyc mocha -r dotenv-extended/config",
+    "build": "NODE_ENV=production webpack --config ./webpack-node.config.js",
+    "coverage": "TS_NODE_FILES=true npx nyc mocha -r dotenv-extended/config",
     "watch": "nodemon --watch '**/*.ts' --exec ts-node -r dotenv-extended/config --files local.ts",
     "test": "cross-env TS_NODE_FILES=true mocha -r dotenv-extended/config",
     "test:watch": "cross-env TS_NODE_FILES=true mocha -r dotenv-extended/config --watch --recursive --watch-extensions ts"
