--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,10 +9,10 @@ metadata:
   tags:
     - nodejs
   links:
-    - url: https://hmcts-reform.slack.com/app_redirect?channel=
-      title: " on Slack"
+    - url: https://hmcts-reform.slack.com/app_redirect?channel=xui-pipeline
+      title: "#xui-pipeline on Slack"
       icon: chat
 spec:
   type: service
   lifecycle: production
-  owner: 
+  owner: dcd_group_expertui_v2
