--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:a11y": "yarn test:ngIntegrationMockEnv && webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:ng": "ng test",
-    "lint": "yarn lint:ng && yarn lint:node",
+    "lint": "yarn lint:ng",
     "lint:ng": "ng lint",
     "lint:node": "cd api && yarn lint",
     "e2e": "ng e2e",
