--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "yarn test:ng",
     "test:a11y": "yarn test:ngIntegrationMockEnv && webdriver-manager update --gecko=false --versions.chrome 2.40 && ng e2e --webdriver-update=false --protractorConfig=./test/accessibility/config/protractor.conf.js",
     "test:a11y1": "ng e2e --protractorConfig=./test/accessibility/config/protractor.conf.js",
-    "test:api": "ts-node ./test/integration/tests/test.ts",
+    "test:api": "yarn test:api:unit && ts-node ./test/integration/tests/test.ts",
+    "test:api:unit": "mocha --config api/.mocha.json",
     "test:can-i-deploy:consumer": "export VERSION=$(git rev-parse --short HEAD) && SSL_CERT_FILE=api/test/pact/cer/ca-bundle.crt pact-broker can-i-deploy --pacticipant 'xui_manageOrg' --version ${VERSION} --broker-base-url https://pact-broker.platform.hmcts.net",
     "test:coverage": "echo 'not implemented'",
     "test:coverage:ng": "ng test rpa-pui-manager --code-coverage --watch",
@@ -100,6 +101,7 @@
     "crypto-js": "^3.1.9-1",
     "dotenv-extended": "^2.7.0",
     "ejs": "^2.6.1",
+    "esm-utils": "^4.1.2",
     "exception-formatter": "^1.0.7",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -179,7 +181,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-spec-reporter": "0.0.34",
-    "mocha": "^8.1.1",
+    "mocha": "^8.4.0",
     "mochawesome": "3.1.1",
     "ng-packagr": "^10.1.0",
     "ngrx-store-freeze": "^0.2.4",
