--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "govuk-frontend": "3.14.0",
     "govuk_frontend_toolkit": "^9.0.0",
     "helmet": "^3.21.3",
+    "http-proxy-middleware": "1.1.x",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -123,6 +124,7 @@
     "ngx-md": "^12.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
+    "node-http-proxy-json": "^0.1.9",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
@@ -131,6 +133,7 @@
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
+    "striptags": "^3.1.1",
     "xlsx": "^0.15.4",
     "zone.js": "~0.10.2"
   },
