--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=12.13.0"
   },
   "scripts": {
-    "audit": "yarn npm audit --environment production --json | jq -cr '.advisories| to_entries[] | {\"type\": \"auditAdvisory\", \"data\": { \"advisory\": .value }}' > yarn-audit-known-issues",
+    "audit": "yarn npm audit --recursive --environment production --json > yarn-audit-known-issues",
     "build": "yarn build:prod && yarn build:node",
     "build:prod": "npx ng build --prod",
     "build:ng": "ng build",
