--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,9 +1,9 @@
-name: Suppressions
+name: Automated update of known-issue suppression
 
 on:
   schedule:
-    # At 12 midnight and every 3rd hour from 10am through 11pm
-    - cron: "0 0,10-23/3 * * *"
+    # At 12 midnight, 7am and 5pm
+    - cron: "0 0,7,17 * * *"
   workflow_dispatch:
 
 jobs:
@@ -19,14 +19,15 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
           ref: master
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - name: Run dependencyCheck
-        run: yarn audit
+          node-version: 12
+          cache: 'yarn'
+      - run: yarn install --frozen-lockfile
+      - run: yarn npm audit --recursive --environment production --json > yarn-audit-known-issues
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           skip_dirty_check: false
-          commit_message: "Suppressing CVE - Actions"
+          commit_message: "Automated update of known-issue suppression"
           branch: master
