--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rpa-pui-manager",
   "version": "0.0.0",
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=18.17.0"
   },
   "scripts": {
     "build": "yarn build:prod && yarn build:node",
@@ -127,12 +127,12 @@
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
     "rx-polling": "^1.1.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^7.8.1",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
     "xlsx": "^0.15.4",
-    "zone.js": "~0.11.8"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.12",
@@ -150,7 +150,7 @@
     "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.4",
     "@types/express-session": "^1.17.0",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.3",
     "@types/mocha": "^5.2.5",
     "@types/node": "^18.17.0",
@@ -169,21 +169,21 @@
     "cucumber-html-reporter": "^4.0.5",
     "cucumber-pretty": "1.5.0",
     "eslint": "^8.37.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-marbles": "^0.4.1",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~5.1.0",
+    "jasmine-marbles": "^0.9.2",
+    "jasmine-spec-reporter": "~7.0.0",
     "jsonwebtoken": "^8.5.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "karma-spec-reporter": "0.0.34",
     "mocha": "^8.1.1",
     "mochawesome": "3.1.1",
     "ng-packagr": "^14.2.2",
     "ngrx-store-freeze": "^0.2.4",
-    "nodemon": "^1.18.9",
+    "nodemon": "^2.0.19",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
     "portfinder": "^1.0.28",
@@ -199,13 +199,14 @@
     "sonar-scanner": "^3.1.0",
     "source-map-explorer": "^1.5.0",
     "terser-webpack-plugin": "^5.3.3",
-    "ts-loader": "^6.2.1",
-    "ts-node": "~10.8.1",
+    "ts-loader": "9.4.4",
+    "ts-node": "10.8.1",
+    "ts-node-dev": "^2.0.0-0",
     "tslib": "^2.1.0",
-    "typescript": "~4.6.4",
+    "typescript": "4.8.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^4.9.2",
+    "webpack-dev-server": "^4.9.4",
     "webpack-node-externals": "^1.7.2",
     "webpack-source-map-support": "^2.0.1"
   },
@@ -217,5 +218,5 @@
     "@stryker-mutator/mocha-runner": "^3.0.1",
     "@stryker-mutator/typescript": "^4.0.0"
   },
-  "packageManager": "yarn@3.5.0"
+  "packageManager": "yarn@3.6.1"
 }
