--- a/angular.json
+++ b/angular.json
@@ -202,6 +202,7 @@
       }
     }
   },
+  "defaultProject": "gov-ui",
   "schematics": {
     "@schematics/angular:component": {
       "style": "scss",
