--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "importHelpers": true,
     "typeRoots": [
       "node_modules/@types"
@@ -33,6 +33,7 @@
         "dist/gov-ui/*"
       ]
     },
+    "useDefineForClassFields": false
   },
   "ts-node": {
     "transpileOnly": true,
